Don't copy files; added TypeScript skeleton

--- a/EcoDevView/webroot/Index.html
+++ b/EcoDevView/webroot/Index.html
@@ -11,6 +11,8 @@
     See also:
     <ul>
         <li><a href="Test.html">Test.html - a table with some API to show the basics of the backend</a></li>
+        <li><a href="clusters.html">clusters.html - clustered map view</a></li>
+        <li><a href="TSTest.html">TSTest.html - TypeScript test</a></li>
     </ul>
 </body>
 </html>
